# dataScience

./: .gitmodules  CMakeLists.txt  README  config.h.in  staticData.ods
applications/: CMakeLists.txt
applications/helloWorld/: helloWorld.cpp
applications/testApp/: testApp.cpp
applications/testApps/testBoard/: testBoard.cpp
applications/testApps/testCard/: testCard.cpp
applications/testApps/testCsprng/: testCsprng.cpp
applications/testApps/testDeck/: testDeck.cpp
applications/testApps/testDictionary/: testDictionary.cpp
applications/testApps/testGeneral/: testGeneral.cpp
applications/testApps/testHandRanker/: testHandRanker.cpp  testHandRankerCompare2_Random.cpp  testHandRankerCompare_Input.cpp  testHandRankerCompare_Random.cpp  testHandRankerHandTypes_Input.cpp  testHandRankerInput.cpp  testHandRankerRandom.cpp  testHandRankerRankExtensive_Random.cpp  testHandRankerRankInfinitum_Random.cpp  testHandRankerRank_Input.cpp  testHandRankerRank_Random.cpp  testHandRankerStraightFinder.cpp  testHandRankerStraightFinder_Input.cpp
applications/testApps/testPktCard/: testPktCard.cpp
applications/utilities/: makeAllEmpiricalDistributionFunctions.cpp
applications/utilities/analyseAllCallTables/: analyseAllCallTables.cpp
applications/utilities/analysePreFlopToRiverTables/: analysePreFlopToRiverTables.cpp
applications/utilities/analyseRiverRankTables/: analyseRiverRankTables.cpp
applications/utilities/makeAllCallTables/: makeAllCallTables.cpp  makeAllCallTablesNoMultiThreading.cpp
applications/utilities/makeAllInTables/: makeAllInTables.cpp  makeAllInTablesNoMultiThreading.cpp
applications/utilities/makePreFlopPredictions/: makePreFlopPredictions.cpp
applications/utilities/makePreFlopToRiverPredictions/: makePreFlopToRiverPredictions.cpp
applications/utilities/makeRiverRankTables/: makeRiverRankTables.cpp
cmake/: pqxxConfig.cmake
data/: .~lock.staticData.ods#  notes  postgresNotes  rankMaxima  staticData.ods
src/: CMakeLists.txt
src/algorithm/: DeckMask.cpp  DeckMask.h  HandRanker.cpp  HandRanker.h  HandRankerCompare.cpp  HandRankerCompare2.cpp  HandRankerCompare_refactor.cpp  HandRankerFindStraightCompleters.cpp  HandRankerGetHandType.cpp  HandRankerGetHandType2.cpp  HandRankerGetHandType_refactor.cpp  HandRankerGetKickers.cpp  HandRankerPredict.cpp  HandRankerPredictFlop.cpp  HandRankerRank.cpp  HandRankerRankKickers.cpp  HandRankerShrrHist.h  HandRankerWorking.cpp  HandType.cpp  HandType.h  PktMask.cpp  PktMask.h  PktMaskDeckIndicesHashTable.h  PktMaskDeckIndicesToPocketMask.h  PktMaskOneMissingSuitTables.h  PktMaskOneSuitTables.h  PktMaskOneValTables.h  PktMaskTwoValTables.h  StraightCompleters.cpp  StraightCompleters.h
src/core/: Board.cpp  Board.h  Card.cpp  Card.h  CardI.h  Card_new.cpp  Dictionary.cpp  Dictionary.h  DictionaryTemplates.cpp  Entry.cpp  Entry.h  HandRanker.cpp  HandRanker.h  HashTable.cpp  HashTable.h  Itstream.h  PktCards.cpp  PktCards.h  PktMask.cpp  PktMask.h  PktMaskDeckIndices.h  PktMaskOneCardTables.h  PktMaskTwoSuitTables.h  PocketCards.cpp  PocketCards.h  PocketMask.cpp  PocketMask.h  PocketMaskDeckIndices.h  PocketMaskOneCardTables.h  PocketMaskOneSuitTables.h  PocketMaskOneValTables.h  PocketMaskTwoSuitTables.h  PocketMaskTwoValTables.h  Token.cpp  Token.h  VecToken.cpp  VecToken.h  VecTokenTemplates.cpp  card.cpp  card.h  (+24 more)
src/gameMechanics/: Avoiders.h  Blinds.cpp  Blinds.h  Board.cpp  Board.h  Card.cpp  Card.h  CardI.h  Deck.cpp  Deck.h  GameManager.h  GhostPlayer.h  PktCards.cpp  PktCards.h  PktVals.cpp  PktVals.h  PktValsI.h  Player.cpp  Player.h  PlayerRef.h  Pot.cpp  Pot.h  Seats.cpp  Seats.h  Suit.cpp  Suit.h  Table.cpp  Table.h  ValStats.cpp  ValStats.h  VecValStats.cpp  VecValStats.h
src/greeter/: greeter.cpp  greeter.h
src/importedCode/mbedtls/: LICENSE  config.h  ctr_drbg.c  ctr_drbg.h
src/importedCode/mbedtlsInterface/: Csprng.cpp  Csprng.h  CsprngTemplates.cpp  EntropyInterface.h
src/importedCode/pqxxInterface/: pqxxInterface.cpp  pqxxInterface.h  pqxxInterfaceTemplates.cpp
src/stats/: AllCallPlayer.cpp  AllCallPlayer.h  AllInPlayer.cpp  AllInPlayer.h  BinaryPlayer.h  RiverRankPlayer.cpp  RiverRankPlayer.h
